WinCC_OA_Test/TestSuites/suite_CtrlppCheck/sub_app/scripts/testscripts/syntaxErrors/missingBracket_04.ctl
// start options:
// error id: syntaxError
// Unmatched ()

void main string s = "")
{
  int i = 0;
  i++;
}